- show lunch/dinner switches below date field always - fixed spacing alignment of switches - adjusted labels

--- a/client/templates/snaxterLayout/snaxterLayout.less
+++ b/client/templates/snaxterLayout/snaxterLayout.less
@@ -258,3 +258,13 @@ div.spinnerBox {
 .product-grid-item .currency-symbol {
   font-size: 18px;
 }
+
+.meal-time-wrapper {
+  padding-top: 10px;
+}
+
+@media screen and (min-width: @screen-xs-min) {
+  .meal-time-wrapper .searchBoxMealDinner {
+    padding-left: 10px;
+  }
+}
